fixed hero and projects swiperjs height on mobile devices again

--- a/css/style.css
+++ b/css/style.css
@@ -657,6 +657,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2.5rem;
 }
 
+.h-\[\]{
+  height: ;
+}
+
+.h-\[40\]{
+  height: 40;
+}
+
+.h-\[40vh\]{
+  height: 40vh;
+}
+
 .max-h-\[\]{
   max-height: ;
 }
@@ -1142,6 +1154,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:hidden{
     display: none;
+  }
+
+  .lg\:h-auto{
+    height: auto;
   }
 
   .lg\:max-h-screen{
